# inventory-rs

./: .gitignore  Cargo.toml  build.rs
protobuf/: database.proto
src/: client.rs  lib.rs  server.rs
src/database/: database.rs
src/storage/: database.rs  mod.rs
tests/: client.rs
