[package]
name = "inventory-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "inventory-client"
path = "src/client.rs"

[[bin]]
name = "inventory-server"
path = "src/server.rs"

[dependencies]
zmq = "0.10.0"
prost = "0.11.8"
egui = "0.21.0"
log = "0.4.17"

[dependencies.uuid]
version = "1.3.2"
features = ["v4"]

[build-dependencies]
prost-build = "0.11.8"
